@@ -1,22 +1,30 @@
 package org.molgenis.emx2.tasks;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.molgenis.emx2.Constants.SYSTEM_SCHEMA;
 import static org.molgenis.emx2.tasks.ScriptType.BASH;
 import static org.molgenis.emx2.tasks.ScriptType.PYTHON;
 import static org.molgenis.emx2.tasks.TaskStatus.COMPLETED;
 import static org.molgenis.emx2.tasks.TaskStatus.ERROR;
 
+import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Path;
+import java.util.Objects;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.molgenis.emx2.Row;
+import org.molgenis.emx2.Schema;
+import org.molgenis.emx2.io.ImportDirectoryTask;
+import org.molgenis.emx2.sql.SqlDatabase;
 
 @Tag("slow")
 public class TestScriptTask {
 
   @Tag("windowsFail")
   @Test
-  public void testPython() throws InterruptedException {
+  public void testPython() {
     System.out.println("first");
     ScriptTask r1 =
         new ScriptTask("hello")
@@ -24,6 +32,7 @@ public class TestScriptTask {
             .dependencies("numpy==2.2.4")
             // example with some characters that need escaping
             .parameters("\"netherlands & world\"")
+            .extraFile(new Row())
             .script(
                 """
 import time
@@ -74,7 +83,7 @@ ls -la
 echo "bey"
 """);
     bashTask.run();
-    assertEquals(bashTask.getStatus(), COMPLETED);
+    assertEquals(COMPLETED, bashTask.getStatus());
   }
 
   @Test
@@ -88,9 +97,71 @@ import sys
 failureVariable = fail
 print('unreachable')
 """)
-            .setServerUrl(new URL("http://localhost:8080/"))
+            .setServerUrl(URI.create("http://localhost:8080/").toURL())
             .failureAddress("test@test.com");
     task.run();
-    assertEquals(task.getStatus(), ERROR);
+    assertEquals(ERROR, task.getStatus());
+  }
+
+  @Test
+  public void testPythonExtraFiles() throws MalformedURLException, InterruptedException {
+    TaskServiceInDatabase taskService =
+        new TaskServiceInDatabase(SYSTEM_SCHEMA, URI.create("http://localhost:8080/").toURL());
+
+    SqlDatabase database = new SqlDatabase(true);
+    database.becomeAdmin();
+    Schema schema = database.getSchema(SYSTEM_SCHEMA);
+
+    ClassLoader classLoader = getClass().getClassLoader();
+    Path path =
+        new File(Objects.requireNonNull(classLoader.getResource("TestScriptTask")).getFile())
+            .toPath();
+    ImportDirectoryTask importDirectoryTask = new ImportDirectoryTask(path, schema, false);
+    importDirectoryTask.run();
+
+    Task csvTask = taskService.getTask(taskService.submitTaskFromName("CSV attachment test", ""));
+    TaskStatus csvTaskStatus = csvTask.getStatus();
+    while (csvTaskStatus != COMPLETED && csvTaskStatus != ERROR) {
+      Thread.sleep(1000);
+      csvTaskStatus = csvTask.getStatus();
+    }
+    Task zipTask = taskService.getTask(taskService.submitTaskFromName("ZIP attachment test", ""));
+    TaskStatus zipTaskStatus = zipTask.getStatus();
+    while (zipTaskStatus != COMPLETED && zipTaskStatus != ERROR) {
+      Thread.sleep(1000);
+      zipTaskStatus = zipTask.getStatus();
+    }
+    assertEquals(COMPLETED, csvTaskStatus);
+    assertEquals(COMPLETED, zipTaskStatus);
+  }
+
+  @Test
+  public void testPythonExtraFiles_shouldFail() throws MalformedURLException, InterruptedException {
+    TaskServiceInDatabase taskService =
+        new TaskServiceInDatabase(SYSTEM_SCHEMA, URI.create("http://localhost:8080/").toURL());
+
+    SqlDatabase database = new SqlDatabase(true);
+    database.becomeAdmin();
+    Schema schema = database.getSchema(SYSTEM_SCHEMA);
+
+    ClassLoader classLoader = getClass().getClassLoader();
+    Path path =
+        new File(Objects.requireNonNull(classLoader.getResource("TestScriptTask")).getFile())
+            .toPath();
+    ImportDirectoryTask importDirectoryTask = new ImportDirectoryTask(path, schema, false);
+    importDirectoryTask.run();
+
+    Task venvTask =
+        taskService.getTask(taskService.submitTaskFromName("Invalid filename test", ""));
+    TaskStatus venvTaskStatus = venvTask.getStatus();
+    while (venvTaskStatus != COMPLETED && venvTaskStatus != ERROR) {
+      Thread.sleep(1000);
+      venvTaskStatus = venvTask.getStatus();
+    }
+    assertTrue(
+        venvTask
+            .getDescription()
+            .contains(
+                "Script failed: Invalid file name 'venv.zip'. Ensure the name of the extra file is not any of 'script.py', 'requirements.txt', or 'venv.zip'."));
   }
 }
